--- a/ui/src/style/index.css
+++ b/ui/src/style/index.css
@@ -1,11 +1,13 @@
-:root {
-  font-family: 'Poppins', Helvetica, sans-serif;
-  font-size: 1rem;
-  line-height: 24px;
-}
-
 * {
   box-sizing: border-box;
+}
+
+*::after, *::before{
+  box-sizing: inherit;
+}
+
+html {
+  margin: 0;
 }
 
 body {
@@ -13,6 +15,10 @@ body {
   min-width: 100vw;
   min-height: 100vh;
   height: 100vh;
+
+  font-family: 'Atkinson Hyperlegible', Helvetica, sans-serif;
+  font-size: 1rem;
+  line-height: 1.3;
 }
 
 #root {
